--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ main{
     font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    margin: 2vh;
+    margin-bottom: 2vh;
 }
 @media (max-width: 1024px) {
 #duckPic{
