--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ body{
     text-align: center;
 }
 main{
-    margin-left: 20vw;
-    margin-right: 20vw;
+    margin-left: 10vw;
+    margin-right: 10vw;
     background-color: #d8dee9;
     padding-bottom: 2vh;
 }
@@ -32,13 +32,22 @@ main{
     transition: background-color 0.3s ease;
     margin-bottom: 2vh;
 }
-@media (max-width: 1024px) {
+@media (max-width: 960px) {
 #duckPic{
         font-size: 8px;
     }
      main{
         margin-left: 5vw;
         margin-right: 5vw;
+    }
+}
+@media (max-width: 481px) {
+#duckPic{
+        font-size: 7px;
+    }
+     main{
+        margin-left: 1vw;
+        margin-right: 1vw;
     }
 }
 .moreDuckBTN:hover{
