--- a/style.css
+++ b/style.css
@@ -1,18 +1,40 @@
+@font-face {
+    font-family: "Roboto";
+}
 body{
+    height: 100%;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: #434c5e;
     text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 main{
-    margin-left: 10vw;
-    margin-right: 10vw;
+    margin-left: 20vw;
+    margin-right: 20vw;
+    margin-bottom: 2vh;
     background-color: #d8dee9;
-    padding-bottom: 2vh;
 }
 .title{
-    font-size: 62px;
-    margin-top: 0;
-    margin-bottom: 2vh;
+    font-family: "Roboto", sans-serif;
+    font-size: 4em;
+    padding-top: 6vh;
+    padding-bottom: 2vh;
+    margin-top: 2vh;
+    margin-bottom: 1vh;
+    text-align: center;
+    font-weight: 700;
+    background-image: url("imgs/title_bg.jpg");
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    background-size: auto 100%;
+    background-repeat: repeat-x;
+    animation: scroll 30s infinite linear;
+}
+@keyframes scroll {
+  from { background-position-x: 0;    }
+  to   { background-position-x: -100% }
 }
 .stripe{
     margin-top: 2vh;
@@ -37,8 +59,8 @@ main{
         font-size: 8px;
     }
      main{
-        margin-left: 5vw;
-        margin-right: 5vw;
+        margin-left: 10vw;
+        margin-right: 10vw;
     }
 }
 @media (max-width: 481px) {
